Replace usages of Path with URL